[package]
name = "dehydrated-s3"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
async-native-tls = { version = "0.5.0" }
ctrlc = { version = "3.4.5", features = ["termination"] }
http = "1.3.1"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["client", "http1", "server"] }
rustls = "0.23.25"
smol = "2.0.2"
smol-hyper = "0.1.1"
