[package]
name = "dehydrated-s3"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
chrono = { version = "0.4.40", default-features = false, features = ["std", "now"] }
hex = "0.4.3"
hmac = "0.12.1"
http = "1.3.1"
httparse = "1.10.1"
hyper = "1.6.0"
sha2 = "0.10.8"
tokio = { version = "1.44.2", features = ["full"] }
tokio-native-tls = "0.3.1"
